# agentic-rag-manufacturing-investment

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  app.py  build_index.py  docker-compose.yml  git_commit_and_merge_strategy.md  pre_commit_rules.md  pyproject.toml
data/rag_docs/: README.md  manifest.json  manifest.sample.json
docs/: demo_scenarios.md  orchestration.md  rag_rules.md  report_format.md
docs/outputs/: final_report_20260313_104944.html  final_report_20260313_104944.md  final_report_20260313_115549.html  final_report_20260313_115549.md  final_state_20260313_104944.json  final_state_20260313_115549.json
src/: config.py  graph.py  prompts.py  schemas.py  scoring.py  state.py
src/agents/: base.py  company_summary.py  competitor_analysis.py  investment_decision.py  market_analysis.py  report_writer.py  startup_search.py  tech_analysis.py
src/rag/: index_builder.py  retriever.py
src/tools/: web_search.py
src/utils/: io.py  pdf_export.py  references.py  text.py
