[project]
name = "agentic-rag-manufacturing-investment"
version = "0.1.0"
description = "Agentic RAG workflow for evaluating manufacturing AI startup investments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.2",
    "langchain-huggingface>=1.0.1",
    "langchain-openai>=1.0.1",
    "langchain-qdrant>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.1",
    "pdfplumber>=0.11.8",
    "pymupdf>=1.26.5",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.14.2",
    "sentence-transformers>=5.1.1",
    "tavily-python>=0.7.12",
    "typing-extensions>=4.13.2",
    "markdown>=3.7",
    "weasyprint>=62.0",
    "matplotlib>=3.9",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
